# artifex

./: .env.example  .gitattributes  .gitignore  .jupytext.toml  .markdownlint.json  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  CONTRIBUTING.md  README.md  TESTING.md  activate.sh  conftest.py  index.html  mkdocs-dev.yml  mkdocs.yml  pyproject.toml  setup.sh
.github/workflows/: build-verification.yml  ci.yml  docs.yml  publish.yml  quality-checks.yml  security.yml
artifex/: 404.html  index.html  meta-descriptions.csv  objects.inv  sitemap.xml
artifex/_static/: custom_css.css  extra.css  mathjax.js
artifex/benchmarks/: index.html
artifex/cli/: index.html
artifex/configs/: index.html
artifex/core/: index.html
artifex/data/: index.html
artifex/examples/: index.html
artifex/extensions/: index.html
artifex/factory/: index.html
artifex/fine_tuning/: index.html
artifex/generative_models/: index.html
artifex/getting-started/: quickstart.py
artifex/inference/: index.html
artifex/javascripts/: mathjax.js  mermaid-math.js  reading-layout.js
artifex/modalities/: index.html
artifex/models/: index.html
artifex/notebooks/: index.html
artifex/scaling/: index.html
artifex/search/: search_index.json
artifex/training/: index.html
artifex/utils/: index.html
artifex/visualization/: index.html
artifex/zoo/: index.html
docs/: index.md
docs/api/: configuration.md  extensions.md  factory.md  sampling.md
docs/architecture/: extensions.md
docs/benchmarks/: audio.md  audio_benchmarks.md  audio_protocols.md  audio_suite.md  base.md  benchmark_runner.md  caching.md  celeba.md  comparison.md  core.md  crossdocked.md  dashboard.md  dataset_loaders.md  disentanglement.md  diversity.md  ffhq.md  geometric.md  geometric_suite.md  image.md  image_benchmarks.md  image_grid.md  image_protocols.md  image_suite.md  image_unified.md  inception_metrics.md  index.md  latency.md  likelihood.md  memory.md  model_adapters.md  molecular_flows.md  multi_beta_vae_suite.md  multimodal_benchmarks.md  multimodal_protocols.md  multimodal_suite.md  optimization.md  optimization_benchmark.md  optimization_plots.md  perplexity.md  plots.md  (+23 more)
docs/cli/: __main__.md  benchmark.md  config.md  convert.md  evaluate.md  formatting.md  generate.md  index.md  logging.md  main.md  progress.md  serve.md  train.md
docs/community/: contributing.md  faq.md
docs/configs/: base.md  cli.md  config_loader.md  conversion.md  data.md  distributed.md  dit..md  error_handling.md  extension_config.md  extensions.md  hyperparam.md  index.md  inference.md  io.md  merge.md  templates.md  training.md  validation.md
docs/core/: adapters.md  adversarial.md  ancestral.md  architecture.md  base.md  benchmarks.md  blackjax_samplers.md  causal.md  checkpointing.md  composable.md  config_commands.md  configuration.md  continuous.md  device_manager.md  device_testing.md  diffusion.md  discrete.md  distance.md  distribution_base.md  divergence.md  environment.md  evaluation.md  fid.md  flash_attention.md  gan.md  geometric.md  inception_score.md  index.md  information.md  interfaces.md  jax_config.md  logging.md  mcmc.md  metric_ops.md  metrics.md  migrate_configs.md  mixture.md  ode.md  parallelism.md  perceptual.md  (+21 more)
docs/data/: audio.md  base.md  bookcorpus.md  bpe.md  character.md  cifar.md  coco.md  collators.md  custom_audio.md  custom_image.md  custom_multimodal.md  custom_text.md  custom_video.md  dataset.md  ffhq.md  image.md  imagenet.md  index.md  librispeech.md  pipeline.md  protein_dataset.md  registry.md  remote.md  samplers.md  sentencepiece.md  structured.md  text.md  tfrecord.md  ucf101.md  vctk.md  video.md  webdataset.md  wikipedia.md  word.md
docs/development/: blackjax-testing.md  example-documentation-design.md  philosophy.md  roadmap.md  testing.md
docs/examples/: index.md  overview.md
docs/extensions/: augmentation.md  backbone.md  constraints.md  embeddings.md  extensions.md  features.md  index.md  mixin.md  registry.md  spectral.md  temporal.md  tokenization.md  utils.md
docs/factory/: autoregressive.md  core.md  diffusion.md  ebm.md  flow.md  gan.md  geometric.md  index.md  registry.md  vae.md
docs/fine_tuning/: distillation.md  dpo.md  few_shot.md  index.md  lora.md  ppo.md  prefix_tuning.md  prompt_tuning.md  rlhf.md  transfer.md
docs/generative_models/: index.md
docs/getting-started/: core-concepts.md  hardware-setup-guide.md  installation.md  quickstart.ipynb  quickstart.md  quickstart.py
docs/guides/: configuration.md  custom-extensions.md  extensions.md  factory.md  geometric-models.md  modalities.md  point-clouds.md  protein-extensions.md  protein-modeling.md
docs/inference/: adapter.md  ancestral.md  autoregressive_generator.md  base.md  beam_search.md  caching.md  classifier_free.md  compilation.md  diffusion_generator.md  distillation.md  dynamic.md  energy_generator.md  flow_generator.md  gan_generator.md  grpc.md  index.md  latency.md  lora.md  memory.md  middleware.md  nucleus.md  onnx.md  padding.md  pipeline.md  prefix_tuning.md  production.md  prompt_tuning.md  pruning.md  quantization.md  rest.md  stateless.md  streaming.md  temperature.md  tensorrt.md  tfjs.md  throughput.md  top_k.md  vae_generator.md
docs/javascripts/: mathjax.js
docs/modalities/: adapters.md  base.md  config.md  datasets.md  evaluation.md  index.md  (+5 more)
examples/: EXAMPLES_GUIDE.md  README.md  run_all_examples.sh  verify_examples.ipynb  verify_examples.py
notebooks/: README.md  artifex_vae_celeba_optimized.ipynb  protein_diffusion.ipynb
quality/: complexity_baseline.json
scripts/: README.md  analyze_dependencies.py  analyze_test_structure.py  blackjax_test_helper.py  build_docs.py  check_complexity_baseline.py  check_jax_nnx_compatibility.py  clean_cache.sh  find_circular_imports.py  fix_imports.py  generate_docs.py  gpu_utils.py  jupytext_converter.py  migrate_batch_sizes.py  serve_docs_fast.sh  setup_env.py  smart_test_runner.sh  validate_docs.py  verify_gpu_setup.py
tests/: __init__.py  conftest.py  test_config_simple.py  test_import_structure.py
(+2085 files in other folders)
