[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling>=1.18"
]

[dependency-groups]
dev = [
  "nbqa>=1.9.1",
  "types-tqdm>=4.67.0.20250809"
]

[project]
authors = [
  {email = "mahdi@avitai.bio", name = "Mahdi Shafiei"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
  "blackjax>=1.2.5",
  "calibrax>=0.1.0",
  "dacite>=1.8.0",
  "datasets>=2.14.0",
  "datarax>=0.1.2",
  "distrax>=0.1.7",
  "flax>=0.12.0",
  "grain>=0.1.0",
  "graphviz>=0.20",
  "huggingface-hub>=0.25.0",
  "jax>=0.4.0",
  "jax-triton>=0.2.0; sys_platform == 'linux'",
  "jaxtyping>=0.2.20",
  "matplotlib>=3.8",
  "mlflow>=2",
  "mock>=5.2",
  "nglview>=3",
  "numpy<2.4.0,>=1.24",
  "optax>=0.2.0",
  "orbax-checkpoint>=0.11.0",
  "pandas>=2.2.2",
  "pre-commit>=4.2",
  "py3dmol>=1",
  "pyasn1>=0.6.3",
  "pydantic>=2",
  "pytest>=8.3.5",
  "requests>=2.33.0",
  "pytest-benchmark>=5.1",
  "pytest-cov>=6.1.1",
  "pytest-xdist>=3.7",
  "python-dotenv>=1.1",
  "scikit-learn>=1.6.1",
  "scipy>=1.12.1",
  "trimesh>=3.30.1",
  "triton>=3.1; sys_platform == 'linux'",
  "tqdm>=4.67",
  "typer>=0.7",
  "psutil>=5.9.5",
  "types-psutil>=5.10.10",
  "typing_extensions>=4.5",
  "wandb>=0.15"
]
description = "ARTIFEX: Architectures + Generative + JAX - A modular generative modeling library"
keywords = [
  "deep-learning",
  "flax",
  "generative-models",
  "jax"
]
license = {file = "LICENSE"}
name = "avitai-artifex"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.optional-dependencies]
# Platform-specific installation:
# - Linux with GPU: uv pip install "avitai-artifex[cuda12]"
# - macOS (Apple Silicon): uv pip install avitai-artifex[all-macos]
# - macOS/Linux CPU-only: uv pip install avitai-artifex[all-cpu]
all = [
  "avitai-artifex[cuda-dev,docs]"
]
all-cpu = [
  # CPU-only installation (no GPU acceleration)
  # Use this for macOS or Linux without CUDA
  "avitai-artifex[dev,docs,test]"
]
all-macos = [
  # macOS with Metal acceleration (Apple Silicon M1/M2/M3+)
  "avitai-artifex[dev,docs,metal,test]"
]
cuda-dev = [
  # Complete Linux CUDA development environment
  "avitai-artifex[dev,test,cuda12]"
]
cuda12 = [
  # Linux CUDA runtime managed through the official JAX extra.
  # The NVIDIA wheel versions are pinned to the validated stack that passes
  # GPU convolution tests on the supported Linux hosts.
  "jax[cuda12]==0.9.1; sys_platform == 'linux'",
  "jaxlib==0.9.1; sys_platform == 'linux'",
  "nvidia-cublas-cu12==12.8.4.1; sys_platform == 'linux'",
  "nvidia-cuda-cupti-cu12==12.8.90; sys_platform == 'linux'",
  "nvidia-cuda-nvcc-cu12==12.9.86; sys_platform == 'linux'",
  "nvidia-cuda-nvrtc-cu12==12.8.93; sys_platform == 'linux'",
  "nvidia-cuda-runtime-cu12==12.8.90; sys_platform == 'linux'",
  "nvidia-cudnn-cu12==9.10.2.21; sys_platform == 'linux'",
  "nvidia-cufft-cu12==11.3.3.83; sys_platform == 'linux'",
  "nvidia-cusolver-cu12==11.7.3.90; sys_platform == 'linux'",
  "nvidia-cusparse-cu12==12.5.8.93; sys_platform == 'linux'",
  "nvidia-nccl-cu12==2.27.5; sys_platform == 'linux'",
  "nvidia-nvjitlink-cu12==12.8.93; sys_platform == 'linux'",
  "nvidia-nvshmem-cu12==3.4.5; sys_platform == 'linux'",
]
dev = [
  "build>=1.0.3",
  "coverage>=7",
  "bandit[toml]>=1.8.6",
  "deadcode>=2.4",
  "deptry>=0.23",
  "flake8>=7.0",
  "flake8-functions-names>=0.4",
  "import-linter>=2.0",
  "interrogate>=1.5",
  "ipykernel>=6.29.5",
  "jupyter>=1.1.1",
  "jupytext>=1.16.6",
  "nbconvert>=7.16.4",
  "pydeps>=1.12.17",
  "pyright>=1.1.336",
  "pylint>=3.3",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.23",
  "pytest-benchmark>=4",
  "pytest-cov>=6.1.1",
  "pytest-env>=1.0.1",
  "pytest-json-report>=1.5.0",
  "pytest-randomly>=3.15",
  "pytest-timeout>=2.1",
  "pytest-xdist>=3.6",
  "python-dotenv>=1",
  "radon>=6.0",
  "ruff>=0.1.5",
  "tensorboard>=2.16",
  "vulture>=2.14",
  "wemake-python-styleguide>=1.0",
  "twine>=4.0.2"
]
docs = [
  "griffe>=1.7.3",
  "hippogriffe>=0.2",
  "mkdocs>=1.6.1",
  "mkdocs-include-exclude-files>=0.1",
  "mkdocs-ipynb>=0.1",
  "mkdocs-jupyter>=0.24",
  "mkdocs-material>=9.6.7",
  "mkdocstrings>=0.28.3",
  "mkdocstrings-python>=1.1.2",
  "pymdown-extensions>=10.14.3"
]
logging = [
  "tensorboard>=2.16"
]
metal = [
  # Metal acceleration for Apple Silicon Macs (M1/M2/M3+)
  # Provides GPU-like acceleration on macOS
  "jax-metal>=0.1.0; sys_platform == 'darwin' and platform_machine == 'arm64'"
]
test = [
  "beartype>=0.14.1",
  "coverage>=7",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.23",
  "pytest-benchmark>=4",
  "pytest-cov>=6.1.1",
  "pytest-env>=1.0.1",
  "pytest-json-report>=1.5.0",
  "pytest-timeout>=2.1",
  "pytest-xdist>=3.6"
]

[project.scripts]
artifex = "artifex.cli.__main__:main"

[project.urls]
repository = "https://github.com/avitai/artifex"

[tool.artifex.ci]
blocking_workflows = [
  ".github/workflows/ci.yml",
  ".github/workflows/build-verification.yml",
  ".github/workflows/security.yml"
]
compatibility_python = ["3.11", "3.12"]
informational_workflows = [
  ".github/workflows/quality-checks.yml"
]
pyright_enforcement = "informational"
smoke_exports = ["generative_models"]
smoke_package = "artifex"
tooling_python = "3.11"

[tool.artifex.ci.security]
mode = "blocking"

[[tool.artifex.ci.security.reviewed_ignores]]
id = "CVE-2025-53000"
owner = "repo-maintainers"
rationale = "nbconvert vulnerability is Windows-only and has no released upstream fix yet"
review_after = "2026-06-30"

[[tool.artifex.ci.security.reviewed_ignores]]
id = "CVE-2026-0994"
owner = "repo-maintainers"
rationale = "protobuf fix exists upstream but has not been released yet"
review_after = "2026-06-30"

[[tool.artifex.ci.security.reviewed_ignores]]
id = "CVE-2026-4539"
owner = "repo-maintainers"
rationale = "Pygments is a transitive dependency from Flax and Typer in the current runtime surface, and the reported advisory still has no released upstream fix version."
review_after = "2026-06-30"

[[tool.artifex.ci.security.reviewed_ignores]]
id = "CVE-2026-3219"
owner = "repo-maintainers"
rationale = "pip is installed as CI tooling in the GitHub Actions virtual environment, and the reported advisory has no released upstream fix version."
review_after = "2026-06-30"

[tool.artifex.repo_standards]
line_length = 100

[tool.artifex.repo_standards.coverage]
# The repo-wide floor stays honest about current enforcement while new work
# is still expected to meet the stronger per-change target.
new_code_target = 80
project_fail_under = 80

[tool.artifex.repo_standards.docs]
development_strict = false
main_strict = true
rtd_fail_on_warning = true

[tool.artifex.repo_standards.interpreter]
docs = "3.11"
minimum_supported = "3.11"
tooling = "3.11"

[tool.artifex.repo_standards.typing]
pyright_mode = "basic"

[tool.bandit]
exclude_dirs = ["tests", "examples", "notebooks", "scripts"]
skips = ["B101", "B404", "B603", "B607", "B110"]

[tool.coverage.html]
directory = "htmlcov"
skip_covered = false
skip_empty = false

[tool.coverage.paths]
source = [
  "src",
  "*/work/artifex/artifex/src"
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
  "pass",
  "raise ImportError"
]
# Canonical values live in [tool.artifex.repo_standards.coverage].
fail_under = 80
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.run]
branch = true
omit = [
  "*/tests/*",
  "*/conftest.py",
  "*/__pycache__/*",
  "*/scripts/*",
  "*/examples/*",
  "*/benchmark/*"
]
parallel = true
relative_files = true
source = ["src"]

[tool.coverage.xml]
output = "coverage.xml"

[tool.hatch.build.targets.sdist]
include = [
  "src/artifex",
  "README.md",
  "LICENSE",
  "pyproject.toml"
]

[tool.hatch.build.targets.wheel]
packages = ["src/artifex"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.importlinter]
root_packages = ["artifex"]

[[tool.importlinter.contracts]]
forbidden_modules = ["artifex.generative_models.models"]
name = "Core config must not import concrete models"
source_modules = ["artifex.generative_models.core.configuration"]
type = "forbidden"

[tool.interrogate]
exclude = ["tests", "scripts", "examples", "notebooks"]
fail-under = 80
ignore-init-method = true
ignore-init-module = true
ignore-magic = true

[tool.pyright]
exclude = ["tests"]
include = ["src"]
# Canonical values live in [tool.artifex.repo_standards.interpreter] and
# [tool.artifex.repo_standards.typing].
pythonVersion = "3.11"
reportFunctionMemberAccess = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false # Incompatible with eqx.AbstractVar
reportMissingImports = false
reportMissingTypeStubs = false
typeCheckingMode = "basic"

[tool.pytest.ini_options]
# Configuration with smart parallel execution and coverage
# Note: -n auto removed to prevent GPU conflicts. Removed --maxfail=1 to run all tests
# Canonical coverage values live in [tool.artifex.repo_standards.coverage].
addopts = "--strict-markers --strict-config --verbose --tb=short --color=yes --durations=10 --disable-warnings --cov=artifex --cov-report=term-missing --cov-report=html --cov-fail-under=80 --timeout=300 --json-report --json-report-file=temp/test-results.json --json-report-indent=2"
cache_dir = ".pytest_cache"
# Additional settings
console_output_style = "progress"
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources.*",
  "ignore::DeprecationWarning:jax.*",
  "ignore:jax.interpreters.xla.pytype_aval_mappings is deprecated:DeprecationWarning",
  "ignore::pytest.PytestCollectionWarning:cannot collect test class 'TestFileAnalysis'",
  "ignore::pytest.PytestCollectionWarning:cannot collect test class 'TestStructureAnalyzer'",
  # CUDA-related warnings (automatically handled by conftest.py)
  "ignore::UserWarning:jax._src.xla_bridge",
  "ignore:.*cuSPARSE.*",
  "ignore:.*CUDA-enabled jaxlib.*"
]
log_cli = true
log_cli_level = "INFO"
markers = [
  "blackjax: marks tests that use BlackJAX integration",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "gpu: marks tests that require GPU and should be skipped when no GPU backend is available",
  "requires_gpu: marks tests as requiring GPU to run",
  "cuda: marks tests that specifically test CUDA functionality",
  "cpu: marks tests that should run on CPU only",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
  "e2e: marks tests as end-to-end tests",
  "benchmark: marks tests as performance benchmarks (requires pytest-benchmark)",
  "performance: marks tests as performance tests (alias for benchmark)",
  "contract: marks tests as contract tests"
]
# Minimum version
minversion = "6.0"
python_classes = "Test*"
python_files = "test_*.py"
python_functions = "test_*"
# Main pytest configuration
testpaths = ["tests"]

[tool.pytest-benchmark]
compare = [
  "last",
  "base"
]
disable_gc = true
histogram = "histogram.svg"
min_rounds = 5
min_time = 0.1
save = "benchmark-results"
save_data = true
warmup = true
warmup_iterations = 3

[tool.pytest-env]
ARTIFEX_MATMUL_PRECISION = "float32"
JAX_ENABLE_X64 = "0"
PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION = "python"
TF_CPP_MIN_LOG_LEVEL = "1"
TF_ENABLE_ONEDNN_OPTS = "0"
TF_FORCE_GPU_ALLOW_GROWTH = "true"
XLA_PYTHON_CLIENT_MEM_FRACTION = "0.75"
XLA_PYTHON_CLIENT_PREALLOCATE = "false"

[tool.ruff]
extend-include = ["*.ipynb"]
# Canonical value lives in [tool.artifex.repo_standards].
line-length = 100
src = []
target-version = "py311"

[tool.ruff.format]
exclude = ["*.ipynb"]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Add W291, W292, W293 to fixable to handle whitespace issues
fixable = ["I001", "F401", "E", "W", "W291", "W292", "W293", "F841", "UP006", "UP007", "UP035"]
ignore = [
  "E402", # Module level import not at top of file
  "E721", # Do not compare types directly
  "E731", # Do not assign a lambda expression, use a def (we can refactor these later)
  "E741", # Ambiguous variable name
  "F722", # Forward annotation syntax error
  "W391", # Blank line at end of file
  "E203" # Whitespace before ':'
]
# E: Pyflakes and pycodestyle errors
# F: Pyflakes
# I: isort
# W: pycodestyle warnings
select = ["E", "F", "I", "W", "D", "F841", "UP006", "UP007", "UP035", "BLE001", "T201"]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
known-first-party = ["artifex"]
lines-after-imports = 2
order-by-type = false

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["D", "F821", "F541", "T201", "UP006", "UP035", "BLE001"] # Notebooks are generated tutorial artifacts with markdown cells and cross-cell context
"docs/**/*.py" = ["D", "T201"] # Docs examples are tutorial sources; Ruff D is enforced on maintained src/ APIs
"examples/**/*.py" = ["D", "T201", "BLE001"] # Examples are executable tutorials with user-facing output and demo error wrappers
# BASELINE: Existing BLE001 (blind except) violations
# T201 remains blocking for maintained runtime code under src/
"src/artifex/cli/__main__.py" = ["T201"]
"src/artifex/configs/utils/templates.py" = ["T201"]
"src/artifex/generative_models/core/cli/config_commands.py" = ["T201"]
"src/artifex/generative_models/core/device_testing.py" = ["BLE001"]
"src/artifex/generative_models/core/performance.py" = ["BLE001"]
"src/artifex/generative_models/extensions/protein/constraints.py" = ["BLE001"]
"src/artifex/generative_models/modalities/timeseries/base.py" = ["BLE001"]
"src/artifex/generative_models/utils/logging/logger.py" = ["BLE001"]
"src/artifex/generative_models/utils/logging/metrics.py" = ["BLE001"]
"src/artifex/generative_models/utils/logging/mlflow.py" = ["BLE001"]
"src/artifex/generative_models/utils/logging/wandb.py" = ["BLE001"]
"tests/**/*.py" = ["D", "E501", "T201", "BLE001"] # Tests allow readable fixture names, debugging output, broad assertion wrappers, and long fixtures
"tests/*.py" = ["D", "E501", "T201", "BLE001"] # Tests allow readable fixture names, debugging output, broad assertion wrappers, and long fixtures
"tests/artifex/generative_models/core/sampling/test_blackjax_samplers.py" = ["E501", "E402", "T201", "BLE001"] # BlackJAX tests use custom imports and debug-style assertions

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
python-preference = "only-managed"
